--- a/examples/exampleA/Makefile
+++ b/examples/exampleA/Makefile
@@ -1,15 +1,38 @@
 #Makefile
+ifdef OS
+   RM = $(powershell  –noprofile rm .\terraform\modules -force -recurse)
+else
+   ifeq ($(shell uname), Linux)
+      RM = rm .terraform/modules/ -fr
+   endif
+endif
 
 .PHONY: all
 
 all: init plan build
 
+init:
+	$(RM)
+	terraform init -reconfigure
 
-lock:
-	@$(TERRAFORM) apply -target module.statebucket.aws_dynamodb_table.dynamodb-state-lock -auto-approve
+plan: init
+	terraform plan -refresh=true
 
+build: init
+	terraform apply -auto-approve
 
-first: init terraform/init lock
-	@$(TERRAFORM) apply -target module.statebucket.aws_s3_bucket.statebucket -auto-approve
-	@$(TERRAFORM) apply -target module.statebucket.local_file.remote_state -lock=false -auto-approve
-	@$(TERRAFORM) init -force-copy
+check: init
+	terraform plan -detailed-exitcode
+
+destroy: init
+	terraform destroy -force
+
+docs:
+	terraform-docs md . > README.md
+
+valid:
+	tflint
+	terraform fmt -check=true -diff=true
+first: init 
+	terraform apply -target module.statebucket.local_file.remote_state -lock=false -auto-approve
+	terraform init -force-copy
