--- a/remote_state.tf.template
+++ b/remote_state.tf.template
@@ -1,6 +1,7 @@
 terraform {
   backend "azurerm" {
-    storage_account_name = "{storage_account_name}"
+    resource_group_name  = "${resource_group_name}"
+    storage_account_name = "${storage_account_name}"
     container_name       = "tfstate"
     key                  = "state-bucket\terraform.tfstate"
   }
