Wrong slash; close#6

--- a/remote_state.tf.template
+++ b/remote_state.tf.template
@@ -3,6 +3,6 @@ terraform {
     resource_group_name  = ${resource_group_name}
     storage_account_name = ${storage_account_name}
     container_name       = "tfstate"
-    key                  = "state-bucket\terraform.tfstate"
+    key                  = "state-bucket/terraform.tfstate"
   }
 }
