--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,21 @@
 *.zip
 
 # Module directory
+.terraform/
 .terraform
 __pycache__/
 .idea
 *.iml
+*.orig
 *.ini
 *~HEAD
 *backup
+*.ini
+tmp
+lambda
+*~HEAD
+*backup
+*.bak
 .terraform.tfstate.lock.info
 .terraform.lock.hcl
-*.orig
 example/examplea/remote_state.tf
