--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.tfstate
 *.tfstate.backup
 *.zip
-
+.DS_Store
 # Module directory
 .terraform/
 .terraform
@@ -13,7 +13,6 @@ __pycache__/
 *.ini
 *~HEAD
 *backup
-*.ini
 tmp
 lambda
 *~HEAD
@@ -21,4 +20,8 @@ lambda
 *.bak
 .terraform.tfstate.lock.info
 .terraform.lock.hcl
-example/examplea/remote_state.tf
+tf.json
+tf.plan
+*.log
+output/*.json
+secrets.auto.tfvars
